# 2025___gz___ros2_ws

./: 1130!Tomaton  1130!Tomaton.pub  README.md
src/bring_up/: CMakeLists.txt  package.xml
src/bring_up/config/: 2025_rviz2_config.rviz  2025_rviz2_map_config.rviz
src/bring_up/launch/: all_run.launch.py  auto.launch.py  manual.launch.py  only.launch.py  only_robot.launch.py  robot_description.launch.py  with_localization.launch.py
src/bring_up/src/: static_tf.cpp  static_tf.hpp
src/bring_up/urdf/: robot.urdf  robot.urdf.xml
src/bring_up/world/: 2025_field.sdf.xml
src/controller_pkg/: CMakeLists.txt  package.xml
src/controller_pkg/src/: manual.cpp
src/corner_localization/: CMakeLists.txt  package.xml
src/corner_localization/src/: corners_find.cpp  corners_find.hpp
src/description/: CMakeLists.txt  package.xml
src/description/launch/: robot.launch.py
src/description/urdf/: robot.urdf
src/interface/: CMakeLists.txt  package.xml
src/interface_pkg/: CMakeLists.txt  package.xml
src/interface_pkg/msg/: ControllerMsg.msg  Corners.msg  CornersPos.msg
src/localization/: CMakeLists.txt  package.xml
src/localization/src/: Identify_corners.cpp  icp_localization.cpp  icp_localization.hpp  icp_localization_ver2.cpp  icp_localization_ver2.hpp  localization.cpp  new_localization.cpp
src/points_processes/: CMakeLists.txt  package.xml
src/points_processes/src/: find_corner.cpp  points_integration.cpp  points_integration.hpp
src/robot_controll/: CMakeLists.txt  package.xml
src/robot_controll/src/: goal_set.hpp  set_goal.cpp  set_goal.hpp  wheels_controll.cpp  wheels_controll.hpp
src/static_tf/: CMakeLists.txt  package.xml
src/static_tf/src/: corner_to_map.cpp
